Update design for main-page. Align subs element on course plate. Fix background for account page.

--- a/src/main/resources/static/css/enter-style.css
+++ b/src/main/resources/static/css/enter-style.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding-top: 1em;
     max-width: 22em;
+    background-color: white;
     box-shadow: 0 0 1em 0 #fdf2e6;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
